--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-    "name": "replicant",
-    "displayName": "Replicant Theme",
-    "description": "A Blade Runner-inspired theme for VS Code",
-    "version": "0.0.1",
-    "publisher": "kenziebottoms",
-    "engines": {
-        "vscode": "^1.26.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "Replicant",
-                "uiTheme": "vs-dark",
-                "path": "./themes/Replicant-color-theme.json"
-            }
-        ]
-    }
+  "name": "replicant",
+  "displayName": "Replicant Theme",
+  "description": "A Blade Runner-inspired theme for VS Code",
+  "version": "0.0.1",
+  "publisher": "kenziebottoms",
+  "engines": {
+    "vscode": "^1.26.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "icon": "icon.png",
+  "contributes": {
+    "themes": [
+      {
+        "label": "Replicant",
+        "uiTheme": "vs-dark",
+        "path": "./themes/replicant.json"
+      }
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kenziebottoms/vscode-theme-replicant.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kenziebottoms/vscode-theme-replicant/issues"
+  },
+  "homepage": "https://github.com/kenziebottoms/vscode-theme-replicant#readme"
 }
